src/styles/1-base/_base-font.scss
/*
 * [ base / font ]
 */

@font-face {
  font-family: 'Neutral Face';
  src: url('@/assets/fonts/Neutral_Face.otf') format('opentype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

.fs-15 {
  font-size: 15px;
  line-height: 24px;

  @media #{$md-down} {
    font-size: 12px;
  }
}

.fs-20 {
  font-size: 20px;
  
  .android & {
    line-height: 14px;
  }

  @media #{$md-down} {
    font-size: 14px;
  }

  @media #{$xs-down} {
    font-size: 12px;
  }
}

.fs-42 {
  font-size: 42px;

  .android & {
    line-height: 22px;
  }

  @media #{$md-down} {
    font-size: 22px;
  }
  @media #{$xs-down} {
    font-size: 18px;
  }
}

.fs-42__big {
  font-size: 42px;

  .android & {
    line-height: 32px;
  }

  @media #{$md-down} {
    font-size: 32px;
  }
  @media #{$xs-down} {
    font-size: 28px;
  }
}

